@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyflann
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyflann/ChangeLog,v 1.1 2013/07/09 23:08:47 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyflann/ChangeLog,v 1.2 2013/08/21 22:03:34 bicatali Exp $
+
+  21 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> pyflann-1.8.4.ebuild:
+  Fix for latests python-r1 changes
 
 *pyflann-1.8.4 (09 Jul 2013)
 
